# oracle-table-migration

./: .gitignore  README.md  pyproject.toml
config/: migration_config.yaml.template
oracle_table_migration/: __init__.py  main.py
oracle_table_migration/config/: config_loader.py
oracle_table_migration/db/: connection.py  oracle_handler.py  schema_validator.py
oracle_table_migration/migration/: __init__.py  migrator.py
oracle_table_migration/utils/: logger.py
tests/: __init__.py  test_config.py  test_connection.py  test_index_migration.py  test_migration.py  test_schema.py
